  produce a fuller report (loadings, long-run matrix)
- Add bootstrapped confidence intervals for impulse responses 
  in VAR models
- Add test for multivariate normality of VAR residuals
- Add autocorrelation and ARCH tests for VAR equations
- Add printing of cross-equation covariance matrix for VARs
- Add combined plot of residuals for VARs
- Add log-likelihood, AIC and BIC for VARs
- Remove overly verbose notification dialogs
- Add importers for Eviews workfiles and Stata .dta files
- Editable windows: show Save button as disabled if there's
  nothing to be saved
- Model selection dialog: ensure that the selected regressand 
  is not also listed among the regressors
- Graph editing: make several more types of graph editable
- Graph saving: add PDF option if it's supported by gnuplot
- Main window: don't show generated lags in the list of variables
- ARMA: remove the ARMA item from the Variable menu (it's still
  there in the Model menu); revamp the X-12-ARIMA driver so it
  can handle models with exogenous regressors 
- gretl graph page: add option to save as TeX source
- TeX: enable pdflatex and viewing of TeX output in PDF form
  (to use pdflatex, enter this as the name of the program to
  compile TeX files under /File/Preferences/General/Programs;
  this is now the default on Windows)
- Add "Send To" (email) functionality for data files and scripts
- "store" command: take file type from filename suffix for
  ".R" (GNU R format), ".m" (Octave format) and ".csv" (comma-
  separated)
- Add new "set" variable, "csv_delim", which sets the delimiter
  used when exporting data as CSV -- valid options are "comma"
  (the default), "space" and "tab"
- Add a new option for CSV export, "--omit-obs": suppresses
  the printing of a first column containing the observations

06/30/2005 version 1.4.1
- Fix horrid unnoticed breakage in bhhh_max (broke both arma 
  and tobit, big mess)	
- Add utf8 validation/conversion for database descriptions 
  (Banco de Espana databases)