@@ -29,7 +29,7 @@ Windows higher than Windows 95.</p>
 
 <p>The link above is to the latest official release.  Another possibilility
 is to download the current "snapshot" of gretl from Wake Forest University:
-<a href="http://ricardo.ecn.wfu.edu/gretl/pub/gretl_install.exe">gretl_install.exe</a>.
+<a href="http://ricardo.ecn.wfu.edu/pub/gretl/gretl_install.exe">gretl_install.exe</a>.
 This is likely to be somewhat more up to date: sometimes it will contain 
 bug-fixes, and sometimes it will contain newly introduced bugs!  
 Translations into languages other than English are likely to be
