@@ -116,6 +116,7 @@ struct gretl_option gretl_opts[] = {
     { LMTEST,   OPT_S, "squares" }, 
     { LMTEST,   OPT_P, "panel" },
     { LMTEST,   OPT_W, "white" },
+    { LOGIT,    OPT_R, "robust" },
     { LOOP,     OPT_P, "progressive" },
     { LOOP,     OPT_Q, "quiet" },
     { LOOP,     OPT_V, "verbose" },
@@ -147,6 +148,7 @@ struct gretl_option gretl_opts[] = {
     { PRINT,    OPT_O, "byobs" },
     { PRINT,    OPT_N, "no-dates" },
     { PRINT,    OPT_T, "ten" },
+    { PROBIT,   OPT_R, "robust" },
     { QUIT,     OPT_X, "exit" },
     { SETOBS,   OPT_C, "stacked-cross-section" },
     { SETOBS,   OPT_S, "stacked-time-series" },
